<resources>
    <string name="app_name">Editoras</string>
    <string name="nome_text">Nome:</string>
    <string name="cnpj_text">CNPJ:</string>
    <string name="nome_social_text">Nome social:</string>
    <string name="inscriao_estadual_text">Inscrição Estadual:</string>
    <string name="telefone_text">Telefone:</string>
    <string name="livros_text">Livros:</string>
    <string name="busca_isbn_descricao_text">Buscar livro por isbn</string>
    <string name="info_de_entrada_busca_isbn_text">Insira o ISBN do livro que deseja ver informações:</string>
    <string name="apenas_isbn_text">ISBN</string>
    <string name="edicao_text">Edição:</string>
    <string name="isbn_text">ISBN:</string>
    <string name="data_de_publicao_text">Data de publicação:</string>
    <string name="idioma_text">Idioma:</string>
    <string name="origem_text">Origem:</string>
    <string name="autores_text">Autores:</string>
    <string name="sinopse_text">Sinopse:</string>
</resources>